;; -*- mode: scheme -*-

(rule
 (targets swagger_j.ml swagger_j.mli)
 (deps    swagger.atd)
 (action  (run atdgen -j %{deps})))

(rule
 (targets swagger_t.ml swagger_t.mli)
 (deps    swagger.atd)
 (action  (run atdgen -t %{deps})))

(library
 (name swagger)
 (public_name swagger)
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (libraries atdgen re.pcre yojson))
